--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,11 @@
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
 }
+
+/* scale effect */
+.scale-effect {
+  transition: all 0.5s ease;
+}
+.scale-effect:hover {
+  transform: scale(1.07);
+}
