--- a/client/src/pages/Home/OurCommunity/community.css
+++ b/client/src/pages/Home/OurCommunity/community.css
@@ -1,10 +1,3 @@
-.stat-container {
-  transition: all 0.5s ease;
-}
-.stat-container:hover {
-  transform: scale(1.07);
-}
-
 .stat {
   display: inline-grid;
   column-gap: 1rem;
@@ -14,4 +7,10 @@
   grid-column-start: 2;
   grid-row: 1 / 4;
   place-self: center;
+}
+
+@media (max-width: 992px) {
+  .stat {
+    border: 0 !important;
+  }
 }
