--- a/client/src/pages/Home/TopicTaught/TopicTaught.css
+++ b/client/src/pages/Home/TopicTaught/TopicTaught.css
@@ -1,10 +1,16 @@
-.tag-list{
-    -webkit-mask: linear-gradient(
-        90deg,
-        transparent,
-        white 20%,
-        white 80%,
-        transparent
-      );
-      mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+.tag-list {
+  -webkit-mask: linear-gradient(
+    90deg,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+  );
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+@media (max-width: 768px) {
+  .tag-list {
+    width: 90vw !important;
+  }
 }
