--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
 
 .primary-text-color {
   background: var(--fire);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
