--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,3 +41,10 @@
   background-color: rgba(14, 165, 233, 0.1) !important;
   color: #0ea5e9 !important;
 }
+
+.filterButton {
+  color: white;
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.2);
+}
